Added additional sample projects including worm virus_macrophage cancer_biorobots and biorobots

--- a/sample_projects/CMakeLists.txt
+++ b/sample_projects/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory(heterogeneity)
+#C++ Compiled binaries for Physicell Standard Projects
 
-#add_subdirectory(tests)
+#PhysiCell Standard Sample Projects
+add_subdirectory(heterogeneity)
+add_subdirectory(worm)
+add_subdirectory(virus_macrophage)
+add_subdirectory(cancer_biorobots)
+add_subdirectory(biorobots)
+
+#Physicell Project Template
