Additional Update to include all files for the template and sample project with Cmake based build and install

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Compiled Object files
+file:///home/dpb53/github/Physicell-Cmake/sample_projects/virus_macrophage/custom_modules/CMakeLists.txtfile:///home/dpb53/github/Physicell-Cmake/sample_projects/virus_macrophage/CMakeLists.txt# Compiled Object files
 **/.DS_Store
 *.slo
 *.lo
