Changed core to physicellcore to help with next step of creating the shared libraries

--- a/sample_projects/heterogeneity/custom_modules/CMakeLists.txt
+++ b/sample_projects/heterogeneity/custom_modules/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library(hetcustmodules SHARED
 heterogeneity.cpp
 )
 
-target_link_libraries(hetcustmodules modules core biofvm ${OpenMP_CXX_LIBRARIES})
+target_link_libraries(hetcustmodules modules physicellcore biofvm ${OpenMP_CXX_LIBRARIES})
 
 install(TARGETS hetcustmodules DESTINATION lib)
