--- a/sample_projects/worm/custom_modules/CMakeLists.txt
+++ b/sample_projects/worm/custom_modules/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library(wormcustmodules SHARED
 custom.cpp
 )
 
-target_link_libraries(wormcustmodules modules core biofvm ${OpenMP_CXX_LIBRARIES})
+target_link_libraries(wormcustmodules modules physicellcore biofvm ${OpenMP_CXX_LIBRARIES})
 
 install(TARGETS wormcustmodules DESTINATION lib)
