--- a/sample_projects/biorobots/custom_modules/CMakeLists.txt
+++ b/sample_projects/biorobots/custom_modules/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library(biorobotscustmodules SHARED
 biorobots.cpp
 )
 
-target_link_libraries(biorobotscustmodules modules core biofvm ${OpenMP_CXX_LIBRARIES})
+target_link_libraries(biorobotscustmodules modules physicellcore biofvm ${OpenMP_CXX_LIBRARIES})
 
 install(TARGETS biorobotscustmodules DESTINATION lib)
