--- a/sample_projects/cancer_biorobots/custom_modules/CMakeLists.txt
+++ b/sample_projects/cancer_biorobots/custom_modules/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library(cancer_biorobotscustmodules SHARED
 cancer_biorobots.cpp
 )
 
-target_link_libraries(cancer_biorobotscustmodules modules core biofvm ${OpenMP_CXX_LIBRARIES})
+target_link_libraries(cancer_biorobotscustmodules modules physicellcore biofvm ${OpenMP_CXX_LIBRARIES})
 
 install(TARGETS cancer_biorobotscustmodules DESTINATION lib)
