--- a/sample_projects/template/custom_modules/CMakeLists.txt
+++ b/sample_projects/template/custom_modules/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library(templatecustmodules SHARED
 custom.cpp
 )
 
-target_link_libraries(templatecustmodules modules core biofvm ${OpenMP_CXX_LIBRARIES})
+target_link_libraries(templatecustmodules modules physicellcore biofvm ${OpenMP_CXX_LIBRARIES})
 
 install(TARGETS templatecustmodules DESTINATION lib)
