--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(BioFVM)
-add_subdirectory(core)
+add_subdirectory(physicellcore)
 add_subdirectory(modules)
