--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(BioFVM)
 add_subdirectory(physicellcore)
 add_subdirectory(modules)
+add_subdirectory(python)
