Started working on a biofvm python wrapper for the microenvironment with pybind

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required( VERSION 2.8 )
+cmake_minimum_required( VERSION 3.4 )
 
 project(PhysiCell CXX )
 
@@ -44,10 +44,11 @@ include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})
 # Find default python libraries and interpreter
 find_package(PythonInterp REQUIRED)
 find_package(PythonLibs REQUIRED)
-include(BuildBoost) # Custom module
-
-include_directories(${Boost_INCLUDE_DIR} ${PYTHON_INCLUDE_DIRS})
-link_directories(${Boost_LIBRARY_DIR})
+#include(BuildBoost) # Custom module
+#find_package(Boost REQUIRED COMPONENTS python numpy)
+add_subdirectory(pybind11)
+#include_directories(${Boost_INCLUDE_DIR} ${PYTHON_INCLUDE_DIRS})
+#link_directories(${Boost_LIBRARY_DIR})
 
 
 #Setting the Runtime Path
