Continued buildout of the BioFVM Microenvironment exposure for use in the python api

--- a/src/python/BioFVM/CMakeLists.txt
+++ b/src/python/BioFVM/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.4)
 
 pybind11_add_module(biofvmpy biofvm_py.cpp)
 
-target_link_libraries(biofvmpy PRIVATE biofvm)
+target_link_libraries(biofvmpy PRIVATE biofvm modules physicellcore )
 
 install(TARGETS biofvmpy DESTINATION lib)
 
