Implemented new module to submodule structure for the physicell library. New structure of the code to clean up overall performance.

--- a/src/python/BioFVM/CMakeLists.txt
+++ b/src/python/BioFVM/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.4)
 
-pybind11_add_module(biofvmpy biofvm_py.cpp)
+add_library(biofvmpy SHARED
+     biofvm_py.cpp)
 
-target_link_libraries(biofvmpy PRIVATE biofvm modules physicellcore )
+target_link_libraries(biofvmpy biofvm modules physicellcore )
 
 install(TARGETS biofvmpy DESTINATION lib)
 
