Additional updates to add more Cell Container functionality and implementing better named arguments to help the user.

--- a/src/BioFVM/CMakeLists.txt
+++ b/src/BioFVM/CMakeLists.txt
@@ -13,10 +13,6 @@ add_library(biofvm SHARED
      BioFVM_vector.cpp 
      pugixml.cpp)
 
-target_link_libraries(biofvm ${OpenMP_CXX_LIBRARIES} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
-
-# Tweaks the name of the library to match what Python expects
-set_target_properties(biofvm PROPERTIES SUFFIX .so)
-set_target_properties(biofvm PROPERTIES PREFIX "")
+target_link_libraries(biofvm ${OpenMP_CXX_LIBRARIES})
 
 install(TARGETS biofvm DESTINATION lib)
