Building out python wrapper for hopefully improving agent tracking with compartmentalization

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.4)
 
 add_subdirectory(BioFVM)
+add_subdirectory(physicellcore)
 
 pybind11_add_module(physicell physicell_py.cpp)
 
-target_link_libraries(physicell PRIVATE biofvmpy biofvm modules physicellcore )
+target_link_libraries(physicell PRIVATE physicellpy biofvmpy biofvm modules physicellcore )
 
 install(TARGETS physicell DESTINATION lib)
