Added custom installer for WIN32 to support the sample projects

--- a/sample_projects/cancer_biorobots/CMakeLists.txt
+++ b/sample_projects/cancer_biorobots/CMakeLists.txt
@@ -14,3 +14,9 @@ install(DIRECTORY DESTINATION "cancer_biorobots/output")
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/sample_projects/cancer_biorobots/config DESTINATION "cancer_biorobots")
 install(TARGETS cancer_biorobots DESTINATION "cancer_biorobots")
 
+IF(WIN32)
+	install(TARGETS biofvm DESTINATION "cancer_biorobots")
+	install(TARGETS physicellcore  DESTINATION "cancer_biorobots")
+	install(TARGETS modules  DESTINATION "cancer_biorobots")
+	install(TARGETS cancer_biorobotscustmodules DESTINATION "cancer_biorobots")
+ENDIF()
