--- a/sample_projects/template/CMakeLists.txt
+++ b/sample_projects/template/CMakeLists.txt
@@ -14,3 +14,9 @@ install(DIRECTORY DESTINATION "template/output")
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/sample_projects/template/config DESTINATION "template")
 install(TARGETS template DESTINATION "template")
 
+IF(WIN32)
+	install(TARGETS biofvm DESTINATION "template")
+	install(TARGETS physicellcore  DESTINATION "template")
+	install(TARGETS modules  DESTINATION "template")
+	install(TARGETS templatecustmodules DESTINATION "template")
+ENDIF()
