--- a/sample_projects/worm/CMakeLists.txt
+++ b/sample_projects/worm/CMakeLists.txt
@@ -14,3 +14,9 @@ install(DIRECTORY DESTINATION "worm/output")
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/sample_projects/worm/config DESTINATION "worm")
 install(TARGETS worm DESTINATION "worm")
 
+IF(WIN32)
+	install(TARGETS biofvm DESTINATION "worm")
+	install(TARGETS physicellcore  DESTINATION "worm")
+	install(TARGETS modules  DESTINATION "worm")
+	install(TARGETS wormcustmodules DESTINATION "worm")
+ENDIF()
