Update to support WIN32 executable standalones for improved testing.

--- a/sample_projects/cancer_immune/CMakeLists.txt
+++ b/sample_projects/cancer_immune/CMakeLists.txt
@@ -14,3 +14,9 @@ install(DIRECTORY DESTINATION "heterogeneity/output")
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/sample_projects/heterogeneity/config DESTINATION "heterogeneity")
 install(TARGETS heterogeneity DESTINATION "heterogeneity")
 
+IF(WIN32)
+	install(TARGETS biofvm DESTINATION "cancer_immune")
+	install(TARGETS physicellcore  DESTINATION "cancer_immune")
+	install(TARGETS modules  DESTINATION "cancer_immune")
+	install(TARGETS cancer_immunecustmodules DESTINATION "cancer_immune")
+ENDIF()
