--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required( VERSION 3.4 )
 
-project(PhysiCell Python)
+project(PhysiCellPython)
 
 # remove compiler checks if you are using VS2010, it supports
 #   1. auto
@@ -33,11 +33,14 @@ FIND_PACKAGE( OpenMP)
   endif()
 include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})
 
+include(AddGitSubmodule.cmake)
+
+add_git_submodule(pybind11)
 
 # Find default python libraries and interpreter
 find_package(PythonInterp REQUIRED)
 find_package(PythonLibs REQUIRED)
-add_subdirectory(pybind11)
+#add_subdirectory(pybind11)
 
 #Setting the Runtime Path
 
@@ -64,3 +67,4 @@ endif("${isSystemDir}" STREQUAL "-1")
 
 add_subdirectory(src)
 add_subdirectory(sample_projects)
+add_subdirectory(python)
