implementation of structure from PyPhysicell from @rheiland

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_subdirectory(BioFVM)
 add_subdirectory(physicellcore)
+add_subdirectory(tests)
 
 pybind11_add_module(physicell physicell_py.cpp)
 
-target_link_libraries(physicell PRIVATE physicellpy biofvmpy biofvm modules physicellcore )
+target_link_libraries(physicell PRIVATE biorobotspy physicellpy biofvmpy biofvm modules physicellcore )
 
 install(TARGETS physicell DESTINATION lib)
